# sensorpro-ble

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  usage.md
src/sensorpro_ble/: __init__.py  parser.py
tests/: test_main.py  test_parser.py
